--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,27 @@
-# Имя workflow
-name: Main Taski Workflow
-# Перечень событий-триггеров, при которых должен запускаться workflow
+name: Main Taski workflow
+
 on:
-  # Событие push возникает,
-  # когда изменения исходного кода приходят на сервер GitHub
   push:
-    # Отслеживаем изменения только в ветке main
     branches:
       - main
-# Перечень задач
+
 jobs:
-  # Единственная задача — склонировать код 
-  # и вывести в консоль дерево файлов
-  checkout-and-print-tree:
+  tests:
     runs-on: ubuntu-latest
+
     steps:
-      # На GitHub Actions есть готовые описания шагов, 
-      # их можно использовать в своих workflow.
-      # Применим готовое описание шага для получения исходного кода
-      - name: Check out repository code  # Имя шага задаём сами
-        uses: actions/checkout@v4  # Берём готовое решение из библиотеки GitHub Actions
-      # Выполняем команду tree в текущей директории
-      - name: Print project tree
-        run: tree .
+    - name: Check out code
+      uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install ruff==0.8.0
+    
+    - name: Lint with ruff
+      run: python -m ruff check backend/
