--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,13 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip 
         pip install ruff==0.8.0
-    
-    - name: Lint with ruff
-      run: python -m ruff check backend/
+        pip install -r ./backend/requirements.txt
+    # Этот шаг дополним:
+    - name: Lint with ruff and run django tests
+      # Команд стало больше одной; ставим символ | и пишем команды построчно
+      run: |
+        python -m ruff check backend/
+        cd backend/
+        python manage.py test
